syntax = "proto3";

import "common.proto";

option go_package = "./comms/volpe";

service VolpeMaster {
  rpc StartStreams (stream WorkerMessage) returns (stream MasterMessage) {}
  rpc GetProblemData(ProblemRequest) returns (stream ImageStreamObject) {}
}

message WorkerID {
  string id = 1;
}

message MasterMessage {
  oneof message {
    AdjustInstancesMessage adjInst = 2;
    MigrationMessage migration = 4;
  }
}

message AdjustInstancesMessage {
  string problemID = 1;
  int32 instances = 3;
}

message WorkerHello {
  WorkerID workerID = 1;
  int32 cpuCount = 2;
  float memoryGB = 3;
}

message MigrationMessage {
  string workerID = 1;
  int32 containerID = 2;
  Population population = 3;
}

message WorkerMessage {
  // can be metrics, or subpopulation
  oneof message {
    DeviceMetricsMessage metrics = 1;
    WorkerHello hello = 3;
    MigrationMessage migration = 4;
  }
}

message DeviceMetricsMessage {
  string workerID = 1;
  float cpuUtilPerc = 2;
  float memUsageGB = 3;
  uint32 netTxBytes = 4;
  uint32 netRxBytes = 5;
}

// message ApplicationMetricsMessage {
// }
// 
// message MetricsMessage {
//   float cpuUtil = 1;
//   float memUsageGB = 2;
//   float memTotal = 3;
//   map<string, ApplicationMetrics> applicationMetrics = 4;
//   string workerID = 5;
// }

message ApplicationMetrics {
  float cpuUtil = 1;
  float memUsage = 2;
}

message ProblemRequest {
  string problemID = 1;
}

// TODO: add close msgs
